# ortec-scientific-benchmarks-loadbuilding

./: CHANGELOG.rst  LICENSE.rst  MANIFEST.in  README.rst  p4.ignore  setup.cfg  setup.py
src/: osbl-find-constraints-objectives.py  osbl-instance.py  osbl-solution-viewer.py  osbl-solution.py
src/ortec/scientific/benchmarks/loadbuilding/: ApplicableConstraintsObjectives.py  LoadbuildInstance.py  LoadbuildSolution.py  SolutionViewer.py  __init__.py
src/ortec/scientific/benchmarks/loadbuilding/common/: NgoiMatrix.py  Requirements.py  utils.py
src/ortec/scientific/benchmarks/loadbuilding/common/constraints/: AxleWeightConstraint.py  ExactStackingConstraint.py  MaximumWeightConstraint.py  MustPlaceConstraint.py  OrientationConstraint.py  (+2 more)
src/ortec/scientific/benchmarks/loadbuilding/instance/: ThreeDboxkind.py  ThreeDconstraint.py  ThreeDcontainerkind.py  ThreeDdescription.py  ThreeDinstance.py  ThreeDitemkind.py  ThreeDloadingspace.py  ThreeDobjective.py  ThreeDpalletkind.py  __init__.py
src/ortec/scientific/benchmarks/loadbuilding/solution/: ThreeDbox.py  ThreeDcontainer.py  ThreeDloadingspace.py  ThreeDpallet.py  ThreeDplacement.py  ThreeDsolution.py
tests/: TestBox.py  TestBoxkind.py  TestConstraint.py  TestContainer.py  TestContainerkind.py  TestDescription.py  TestInstance.py  TestItemkind.py  TestLoadingspace.py  TestObjective.py  TestPalletkind.py  TestPlacement.py  TestReadInstance.py  TestReadSolution.py  TestUtils.py
tests/read/container/: inst.xml  test1.json  test1.xml  test1.yaml
tests/read/containerkind/: test1.json  test1.xml  test1.yaml  test10.json  test10.xml  test10.yaml  test11.json  test11.xml  test11.yaml  test12.json  test12.xml  test12.yaml  test13.json  test13.xml  test13.yaml  test2.json  test2.xml  test2.yaml  test3.json  test3.xml  test3.yaml  test4.json  test4.xml  test4.yaml  test5.json  test5.xml  test5.yaml  test6.json  test6.xml  test6.yaml  test7.json  test7.xml  test7.yaml  test8.json  test8.xml  test8.yaml  test9.json  test9.xml  test9.yaml
tests/read/description/: test1.json  test1.xml  test1.yaml  test2.json  test2.xml  test2.yaml  test3.json  test3.xml  test3.yaml
tests/read/palletkind/: test1.json  test1.xml  test1.yaml  test2.json  test2.xml  test2.yaml  test3.json  test3.xml  test3.yaml  test4.json  test4.xml  test4.yaml  test5.json  test5.xml  test5.yaml  test6.json  test6.xml  test6.yaml  test7.json  test7.xml  test7.yaml  test8.json  test8.xml  test8.yaml  test9.json  test9.xml  test9.yaml
(+23 files in other folders)
