[metadata]
name = ortec.scientific.benchmarks.loadbuilding
version = attr: src.ortec.scientific.benchmarks.loadbuilding.__version__
url = https://benchmarks.ortec.com/Loadbuilding
download_url = https://github.com/ORTECScientificBenchmarks/ortec-scientific-benchmarks-loadbuilding/archive/master.zip
project_urls =
    Source Code = http://github.com/ORTECScientificBenchmarks/ortec-scientific-benchmarks-loadbuilding
    Package Index = https://pypi.org/project/ortec.scientific.benchmarks.loadbuilding/
    ORTEC Benchmarks = https://benchmarks.ortec.com/
    Documentation - Tools = https://benchmarks.ortec.com/Content/Loadbuilding/Documentation/Tools.pdf
    Documentation - Instances = https://benchmarks.ortec.com/Content/Loadbuilding/Documentation/Instance.pdf
    Documentation - Solutions = https://benchmarks.ortec.com/Content/Loadbuilding/Documentation/Solution.pdf
author = ORTECScientificBenchmarks
author_email = benchmarks@ortec.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
license = MIT
description = Tools for the working with the ORTEC loadbuilding benchmark problems
long_description_content_type = text/x-rst
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = loadbuilding scientific benchmarks ortec cutting packing

[options]
zip_safe = False
include_package_data = True
packages = 
    ortec.scientific.benchmarks.loadbuilding
    ortec.scientific.benchmarks.loadbuilding.common
    ortec.scientific.benchmarks.loadbuilding.common.constraints
    ortec.scientific.benchmarks.loadbuilding.common.objectives
    ortec.scientific.benchmarks.loadbuilding.instance
    ortec.scientific.benchmarks.loadbuilding.instance.read
    ortec.scientific.benchmarks.loadbuilding.instance.write
    ortec.scientific.benchmarks.loadbuilding.solution
    ortec.scientific.benchmarks.loadbuilding.solution.read
    ortec.scientific.benchmarks.loadbuilding.solution.write
install_requires =
    vpython
    pyyaml>=5.1
setup_requires = 
    coverage
python_requires = ~=3.6
package_dir =
     = src

[nosetests]
verbosity = 2
detailed-errors = 1
with-coverage = 1
cover-package = ortec.scientific.benchmarks.loadbuilding
exclude = testListOn.*
